[package]
name = "rocket-voter"
version = "0.1.0"
authors = ["dmytro.pakhmanov <dmytro.pakhmanov@numberfour.eu>"]
edition = "2018"
publish = false

[dependencies]
rocket = "0.4.0"
rusqlite = {version = "0.16", features = ["chrono"]}
chrono = "0.4"
itertools = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.2.0"

[dependencies.rocket_contrib]
version="0.4"
default-features = false
features = ["handlebars_templates"]